2008-10-05  Vlad Seryakov <seryakov@users.sf.net>

	include/nsthread.h: OS X does not have O_LARGEFILE

2008-10-02  Stephen Deasey <sdeasey@users.sf.net>

	* configure.in:
	* nsd/sockfile.c: Add Linux native sendfie implementation.

2008-10-02  Stephen Deasey <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/connio.c:
	* nsd/sock.c: Ns_SockSendBufs now handles buffer shuffling for
	UIO_MAXIOV. Ns_ConnSend now much simpler. Use Ns_SetVec and new
	Ns_ResetVec for clarity.

	* include/ns.h:
	* nsd/driver.c:
	* nssock/nssock.c: Pass timeouts to driver callbacks explicitly so
	that in the future non-blocking writes may be made if no timeout
	is given.

	* nsd/connio.c: Clarify Ns_ConnWriteVData with Ns_SetVec.

	* nsd/connio.c: Reorder the functions. No code change.

2008-10-01  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/driver.c:
	* nssock/nssock.c: Convert the Ns_DriverProc callback into
	5 individual callbacks: Ns_DriverRecvProc, Ns_DriverSendProc,
	Ns_DriverSendFileProc, Ns_DriverKeepProc, and Ns_DriverCloseProc.

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/driver.c:
	* nssock/nssock.c: Add new Ns_DriverListenProc callback which is
	reponsible for opening the listening driver socket at
	server startup.

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/driver.c:
	* nssock/nssock.c: Add new Ns_DriverAcceptProc callback which is
	responsible for accepting incoming socket connections from the
	driver listen socket.

	It can opperate in two modes: in the first it accepts and returns
	the new socket (same as before), in the second it tells the driver
	thread it believes data is ready to be read from the socket.
	In this case the driver thread will skip pushing the socket onto
	the read queue and attempt the read immediately. This saves a trip
	throught the poll loop.

	The second mode could be used by UDP sockets where there is no
	accept phase.

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/driver.c: Remove the NS_DRIVER_* options and the code that